# models/cluster_status_info.go
@@ -1,0 +1,20 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+)
+
+// ClusterStatusInfo cluster status info
+//
+// swagger:model cluster_status_info
+type ClusterStatusInfo string
+
+// Validate validates this cluster status info
+func (m ClusterStatusInfo) Validate(formats strfmt.Registry) error {
+	return nil
+}
