# restapi/operations/assisted_install_api.go
@@ -148,6 +148,9 @@ func NewAssistedInstallAPI(spec *loads.Document) *AssistedInstallAPI {
 		InstallerResetClusterHandler: installer.ResetClusterHandlerFunc(func(params installer.ResetClusterParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.ResetCluster has not yet been implemented")
 		}),
+		InstallerSetStatusInfoHandler: installer.SetStatusInfoHandlerFunc(func(params installer.SetStatusInfoParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation installer.SetStatusInfo has not yet been implemented")
+		}),
 		InstallerUpdateClusterHandler: installer.UpdateClusterHandlerFunc(func(params installer.UpdateClusterParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.UpdateCluster has not yet been implemented")
 		}),
@@ -297,6 +300,8 @@ type AssistedInstallAPI struct {
 	InstallerRegisterHostHandler installer.RegisterHostHandler
 	// InstallerResetClusterHandler sets the operation handler for the reset cluster operation
 	InstallerResetClusterHandler installer.ResetClusterHandler
+	// InstallerSetStatusInfoHandler sets the operation handler for the set status info operation
+	InstallerSetStatusInfoHandler installer.SetStatusInfoHandler
 	// InstallerUpdateClusterHandler sets the operation handler for the update cluster operation
 	InstallerUpdateClusterHandler installer.UpdateClusterHandler
 	// InstallerUpdateClusterInstallConfigHandler sets the operation handler for the update cluster install config operation
@@ -498,6 +503,9 @@ func (o *AssistedInstallAPI) Validate() error {
 	}
 	if o.InstallerResetClusterHandler == nil {
 		unregistered = append(unregistered, "installer.ResetClusterHandler")
+	}
+	if o.InstallerSetStatusInfoHandler == nil {
+		unregistered = append(unregistered, "installer.SetStatusInfoHandler")
 	}
 	if o.InstallerUpdateClusterHandler == nil {
 		unregistered = append(unregistered, "installer.UpdateClusterHandler")
@@ -757,6 +765,10 @@ func (o *AssistedInstallAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/clusters/{cluster_id}/actions/reset"] = installer.NewResetCluster(o.context, o.InstallerResetClusterHandler)
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/clusters/{cluster_id}/status_info"] = installer.NewSetStatusInfo(o.context, o.InstallerSetStatusInfoHandler)
 	if o.handlers["PATCH"] == nil {
 		o.handlers["PATCH"] = make(map[string]http.Handler)
 	}
