# swagger.yaml
@@ -1767,6 +1767,56 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
+  /clusters/{cluster_id}/status_info:
+    post:
+      tags:
+        - installer
+      security:
+        - agentAuth: []
+      summary: Set cluster status info
+      operationId: SetStatusInfo
+      parameters:
+        - in: path
+          name: cluster_id
+          type: string
+          format: uuid
+          required: true
+        - name: status_info
+          in: body
+          schema:
+            $ref: '#/definitions/cluster_status_info'
+      responses:
+        204:
+          description: Success.
+        400:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        401:
+          description: Unauthorized.
+          schema:
+            $ref: '#/definitions/infra_error'
+        403:
+          description: Forbidden.
+          schema:
+            $ref: '#/definitions/infra_error'
+        404:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        405:
+          description: Method Not Allowed.
+          schema:
+            $ref: '#/definitions/error'
+        500:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        503:
+          description: Unavailable.
+          schema:
+            $ref: '#/definitions/error'
+
   /domains:
     get:
       tags:
@@ -1982,7 +2032,7 @@ definitions:
         type: string
         enum: ['Host', 'AddToExistingClusterHost']
         description: |
-          Indicates the type of this object. Will be 'Host' if this is a complete object or 'HostLink' if it is just a link, or 
+          Indicates the type of this object. Will be 'Host' if this is a complete object or 'HostLink' if it is just a link, or
           'AddToExistingClusterHost' for host being added to existing OCP cluster.
       id:
         type: string
@@ -2908,7 +2958,7 @@ definitions:
       verify_cidr:
         type: boolean
         description: Whether to verify if the API VIP belongs to one of the interfaces.
-  
+
   api_vip_connectivity_response:
     type: object
     properties:
@@ -2925,6 +2975,9 @@ definitions:
         type: string
       console_url:
         type: string
+
+  cluster_status_info:
+    type: string
 
   host-role-update-params:
     type: string
